--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -24,11 +25,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 }
 
@@ -42,6 +43,13 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-//    implementation 'com.github.Dhaval2404:ColorPicker:2.3'
+    //Color picker
+    implementation 'io.github.eltos:simpledialogfragments:3.6.4'
 
+//    //Hilt
+//    implementation "com.google.dagger:hilt-android:2.45"
+//    kapt "com.google.dagger:hilt-compiler:2.45"
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+//    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+//    implementation 'androidx.work:work-runtime-ktx:2.8.1'
 }
